[gd_scene load_steps=3 format=3 uid="uid://bf30cimyfkwi0"]

[ext_resource type="FontFile" uid="uid://dccfwfvw53bwp" path="res://promptfont.otf" id="1_v6p8y"]
[ext_resource type="Script" uid="uid://bvt5niauy2djk" path="res://utilities/title_screen.gd" id="2_ak2if"]

[node name="TitleScreen" type="RichTextLabel"]
offset_right = 640.0
offset_bottom = 480.0
theme_override_fonts/normal_font = ExtResource("1_v6p8y")
theme_override_font_sizes/normal_font_size = 37
text = "Controls:
Move: ⇎, ⇋ or ⏴⏵⏶⏷
Use sword: ↧ or Ｚ
Use item: ↦ or Ｘ
Change item: ⇷ or ␺
Pause: ⇸, ␮ or ␯
Seed (type number to change):


Press ⇸, ␮ or ␯ to continue."
fit_content = true
horizontal_alignment = 1
script = ExtResource("2_ak2if")

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 0.08

[node name="SeedBox" type="LineEdit" parent="."]
layout_mode = 0
offset_top = 320.0
offset_right = 640.0
offset_bottom = 360.0
theme_override_fonts/font = ExtResource("1_v6p8y")
theme_override_font_sizes/font_size = 37
alignment = 1
max_length = 22
clear_button_enabled = true
flat = true
caret_blink = true

[connection signal="timeout" from="FadeTimer" to="." method="_on_fade_timer_timeout"]
